--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">SimpleToDoList</string>
     <string name="add_task">Add Task</string>
+    <string name="dummyDate">20/20/2022</string>
+    <string name="enter_your_task">Enter your Task</string>
+    <string name="add">Add</string>
 </resources>
